--- a/color_app/templates/color_app/color_list.html
+++ b/color_app/templates/color_app/color_list.html
@@ -8,7 +8,10 @@
       <p>
         <a href="{% url 'color_app:new_color' %}">
 			    Add a new color
-	      </a> 
+	      </a> <br>
+		<a href="{% url 'color_app:index' %}">
+			Back Home
+	  		</a> 
       </p>
 		</div>
 	</div>
