--- a/color_app/templates/color_app/color_list.html
+++ b/color_app/templates/color_app/color_list.html
@@ -24,11 +24,13 @@
 			  </svg>
 	    </a> 
 		</div>
-	  {% for color in object_list %}
-		  <div class="swatch">
-				{% include "color_app/swatch.html" %}
-		  </div>
-		{% endfor %}
+	{% for color in object_list %}
+		<a href="{% url 'color_app:color_detail' color.id %}">
+		<div class="swatch">
+		  {% include "color_app/swatch.html" %}
+		</div>  
+		</a>
+	  {% endfor %}
 	</div>
 	<script src="{% static 'color_app/offset_swatches.js' %}"></script>
 {% endblock %}
