--- a/color_app/templates/color_app/random_color.html
+++ b/color_app/templates/color_app/random_color.html
@@ -18,6 +18,7 @@
   <div class="row">
     <div class="col text-center">
       <h1>Random color</h1>
+      <div id="link"><a href="{% url 'color_app:index' %}">Back Home</a><br></div>
 			<p>
 			  Do you like it? If not, 
 				<a href="{% url 'color_app:random_color' %}">choose another</a>.
