--- a/color_app/templates/color_app/color_form.html
+++ b/color_app/templates/color_app/color_form.html
@@ -5,6 +5,7 @@
   <div class="row">
     <div class="col text-center">
       <h1>Add a new color</h1>
+	  <div id="link"><a href="{% url 'color_app:index' %}">Back Home</a><br></div>
 			<form method="post">
 				{% csrf_token %}
     	  {{ form | crispy }}
