--- a/color_app/templates/color_app/index.html
+++ b/color_app/templates/color_app/index.html
@@ -6,9 +6,9 @@
       <h1> Hello {{name}}</h1>
       {% include "color_app/swatch.html" %}
       <p>
-        <a href="{% url 'color_app:random_color' %}">
-	  How about a random color?
-	</a> 
+        <a href="{% url 'color_app:random_color' %}">How about a random color?</a><br>
+        <a href="{% url 'color_app:new_color' %}">How about a new color?</a><br>
+        <a href="{% url 'color_app:color_list' %}">color list</a>
       </p>
     </div>
   </div>
